2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-15  Jody Goldberg <jody@gnome.org>

	* configure.in : Force libxklavier 1.0.2 so that we can work with
	  x.org and xfree86

2004-04-14  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-04-08  Jody Goldberg <jody@gnome.org>

	* libbackground/applier.c (egg_pixbuf_new_from_file_at_size) :
	  disable translation until after gnome-2-6 branch

2004-04-01  Jody Goldberg <jody@gnome.org>

	* configure.in : We'll keep bumping it until we get it right

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.6.1.

2004-03-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.6.0.2.

2004-03-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.in:
	* gnome-settings-daemon/actions/Makefile.am:
          check for GStreamer 0.8 properly
          make sure -gstreamer files get disted for gnome-settings-daemon
          re-enable GStreamer by default since #131316 got fixed

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-25  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-23  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-16  Jody Goldberg <jody@gnome.org>

	* configure.in : require libxklavier 1.0 to get a few crashers fixed

2004-03-11  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
