@@ -1,7 +1,7 @@
 AC_INIT(control-center)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(control-center, 2.6.1)
+AM_INIT_AUTOMAKE(control-center, 2.7.0)
 
 AM_MAINTAINER_MODE
 
