@@ -1,3 +1,9 @@
+2004-04-16  Jody Goldberg <jody@gnome.org>
+
+	From paolo borelli :
+	http://bugzilla.gnome.org/show_bug.cgi?id=139723
+	* gnome-keybinding-properties.c (accel_edited_callback) : fix leak
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
