@@ -1,3 +1,7 @@
+2004-04-16  Jody Goldberg <jody@gnome.org>
+
+	* configure.in : post branch release bump to 2.7.0
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
